# nolgraph

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  compile_commands.json  format.sh  main.cpp  references.txt  road  road.html  road.org  road.tex
canvas/: CMakeLists.txt  Makefile  cmake_install.cmake
canvas/include/: exporters.hpp
canvas/src/: canvas.cpp  export_bmg.cpp  export_png.cpp  export_tga.cpp
core/: camera.cpp  camera.hpp  objects.hpp  renderer.cpp  renderer.hpp
history/: descriptions.txt
include/: camera.hpp  math.hpp  objects.hpp
include/acc_structs/: bbox.hpp  bvh.hpp  types.hpp  volumes.hpp
include/core/: camera.hpp  material.h  renderer.hpp  scene.hpp
include/io_system/: canvas.hpp  exporters.hpp  gltf.hpp  json.hpp
include/math/: vec2.hpp  vec3.hpp  vec4.hpp
include/primitives/: sphere.hpp  triangle.hpp  types.hpp
io_utils/: canvas.cpp  canvas.hpp  export_bmg.cpp  export_png.cpp  export_tga.cpp  exporters.hpp  gltf.cpp  gltf.hpp  json.cpp  json.hpp
math/: math.hpp
src/: camera.cpp  main.cpp
src/acc_structs/: bbox.cpp  bbox.hpp  bvh.cpp  bvh.hpp  primitive.cpp  primitive.hpp
src/core/: camera.cpp  camera.hpp  material.hpp  mesh.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  triangle.cpp  triangle.hpp  types.hpp
src/core/integrators/: integrator.cpp  integrator.hpp  uniform.cpp  uniform.hpp
src/core/primitives/: plane.hpp  quad.cpp  quad.hpp  sphere.hpp  triangle.cpp  triangle.hpp
src/io/: canvas.cpp  canvas.hpp  export_png.cpp  export_tga.cpp  exporters.hpp  obj_loader.cpp  obj_loader.hpp
src/io_system/: canvas.cpp  export_tga.cpp  gltf.cpp  json.cpp
src/math/: helpers.cpp  helpers.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/primitives/: triangle.cpp
src/test/: bbox.cpp  primitives.cpp  test.hpp
src/test/scenes/: robot.hpp
src/tests/: bbox.cpp
